Fixed layout on mobile

--- a/spiral.css
+++ b/spiral.css
@@ -207,12 +207,16 @@
 	}
 
 	.spiral.fixed {
-		left: -85%;
-		width: 300%;
-		transform: scale(0.5, 0.5);
-		height: 200%;
-		top: -50%;
+		left: -42%;
+		width: 150%;
+		/* transform: scale(0.5, 0.5); */
+		height: 100%;
+		top: 0;
 	}
+    
+    .spiral-div {
+        transform: scale(0.5, 0.5);
+    }
 
 	.scrollDummy {
 	    height: 4500px;
